--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,6 +1,8 @@
-name: Test Upload
+name: Update JSON Daily
 
 on:
+  schedule:
+    - cron: "0 0 * * *"   # UTC 00:00 (Türkiye 03:00)
   workflow_dispatch:
 
 jobs:
@@ -8,18 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - run: pip install boto3
+      - name: Install dependencies
+        run: pip install boto3
 
       - name: Run script
         env:
+          R2_ACCOUNT_ID: ${{ secrets.R2_ACCOUNT_ID }}
           R2_ACCESS_KEY: ${{ secrets.R2_ACCESS_KEY }}
           R2_SECRET_KEY: ${{ secrets.R2_SECRET_KEY }}
-          R2_ACCOUNT_ID: ${{ secrets.R2_ACCOUNT_ID }}
-          R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
         run: python process_json.py
